# DRH-Launcher

./: .gitignore  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: package-drhl.yml  release.yml  test-packages.yml
docs/: architecture.md  packaging.md
packaging/linux/: io.github.Tutez64.DRHLauncher.desktop  io.github.Tutez64.DRHLauncher.desktop.in
scripts/: generate-launcher-update-manifest.py  install-linux-desktop-dev.sh
src/: archive.rs  atomic_file.rs  changelog_markdown.rs  config.rs  diagnostics.rs  download.rs  game_install.rs  game_launch.rs  game_logs.rs  game_runtime.rs  github_releases.rs  home_view.rs  install_metadata.rs  install_state.rs  installer.rs  launch_options.rs  launcher_update.rs  linux_appimage.rs  log_view.rs  main.rs  paths.rs  platform.rs  play_mode.rs  release_manifest.rs  release_source.rs  version_history.rs
ui/: app.slint  components.slint  theme.slint
