[package]
name = "drh_launcher"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "GPL-3.0-or-later"

[[bin]]
name = "DRH-Launcher"
path = "src/main.rs"

[dependencies]
directories = "6.0.0"
flate2 = "1.1.9"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
slint = "1.16.1"
tar = "0.4.46"
zip = { version = "9.0.0-pre2", default-features = false, features = ["deflate"] }
zstd = "0.13.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
slint-build = "1.16.1"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
codegen-units = 1
lto = true
